bugfix - scrolling on mobile browser while modal active

--- a/style/css/modal.css
+++ b/style/css/modal.css
@@ -9,12 +9,11 @@ button::-moz-focus-inner {
 }
 
 .modal-active {
-    overflow: hidden;
     position: fixed;
-    top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    height: auto;
 }
 
 .modal-wrapper {
